Light editing up to Chap 3.

--- a/data.tex
+++ b/data.tex
@@ -78,7 +78,7 @@ and predictive analytics.''}  They compare the area with the operations research
 that data science focuses on implementing data-driven decisions and managing their
 consequences.
 
-\textcite{Wickham2023}\footfullcite{Wickham2023} state that \emph{``data science is an exciting discipline that
+\textcite{Wickham2023}\footfullcite{Wickham2023} declare that \emph{``data science is an exciting discipline that
 allows you to transform raw data into understanding, insight, and knowledge.''}
 
 \textcite{Hayashi1998}\footfullcite{Hayashi1998} says that data science ``is not only a
@@ -106,7 +106,7 @@ they come.  Data science is not only about data, but about understanding the phe
 they represent.
 
 Note that these definitions do not contradict each other.  But, they do not attempt to
-emphasize the ``science'' aspect of it.  From these thoughts, let us define the term.
+emphasize the ``science'' aspect of it.  From these ideas, let us define the term.
 
 \begin{defbox}{Data science}{ds}
   Data science is the study of knowledge extraction from
@@ -115,7 +115,7 @@ emphasize the ``science'' aspect of it.  From these thoughts, let us define the 
 
 I want to highlight the meaning of some terms in this definition.  \emph{Computational methods} means
 that data science methods use computers to handle data and perform the calculations.
-\emph{Knowledge} means information that humans can easily understand and/or apply to solve
+\emph{Knowledge} means information that humans can understand and/or apply to solve
 problems.  \emph{Measurable phenomena} are events or processes where raw data can be
 quantified in some way\footnote{%
   Non-measurable phenomena are related to metaphysics and are not the object of study in
@@ -212,8 +212,8 @@ Usually, a practical consequence of academic recognition is the creation of a ne
 and programs in universities.  This is the case of data science.  Many universities have
 created data science programs in the last years.
 
-Once efforts to develop the subject increase, it is natural that methodologies evolve and
-that questions not particularly related to any other science.  This effect produces what I
+Once efforts to develop the subject increase, it is natural that some methodologies and
+questions not particularly related to any other science evolve.  This effect produces what I
 call the ``data science continuum.''
 
 In a continuum, the subject is not a new science yet.  It is a set of methods and
@@ -407,14 +407,14 @@ Deductive reasoning is the process of deriving a conclusion (or new knowledge) f
 a set of previous knowledge.  Deductive reasoning, thus, enables us to infer
 generalization rules from generalization rules.
 
-Important figures that bridged the gap between philosophy and mathematics are
+Important figures that bridged the gap between the subjects of philosophy and mathematics are
 René Descartes (1596 -- 1650) and Gottfried Wilhelm Leibniz (1646 -- 1716).  Descartes
 was the first to use algebra to solve knowledge problems, effectively creating
 methods to mechanize reasoning.  Leibniz, after Descartes, envisioned a universal
 algebraic language that would encompass logical principles and methods. Their work
 influenced the development of calculus, Boolean algebra, and many other fields.
 
-Once we have collected and stored the data, we need to extract knowledge from them.
+Once we have collected and stored the data, the next step is to extract knowledge from them.
 Knowledge extraction is the process of obtaining knowledge from data.  The reasoning
 principle here is inductive reasoning.  Inductive reasoning is the process of deriving
 generalization rules from specific observations.  Inductive reasoning and data analysis
@@ -441,7 +441,7 @@ analyze geographical data.  And so on.
 Each method has its own assumptions and limitations.  Thus, we need to understand the
 nature of the methods we are using.  In particular, we need to understand the
 expected input and output of them.  Whenever the available data do not match the
-requirements of the method, we may perform data preprocessing\footnote{%
+requirements of the technique, we may perform data preprocessing\footnote{%
   It is important to highlight that it is expected that some of the methods assumptions
   are not fully met.  These methods are usually robust enough to extract valuable
   knowledge even when data contain imperfections, errors and noise.  However, it is still
