--- a/main.tex
+++ b/main.tex
@@ -107,7 +107,7 @@
 \setsecnumdepth{subsection}
 \maxtocdepth{subsection}
 
-\babelhyphenation[english]{par-a-digm}
+\babelhyphenation[english]{par-a-digm pipe-line}
 
 \newtcolorbox[auto counter, number within=chapter, crefname={algorithm}{algorithms}]{algobox}[2][]{%
   float=thbp, base={Algorithm \thetcbcounter: #2},
