Light editing up to chap 4.

--- a/handling.tex
+++ b/handling.tex
@@ -1207,7 +1207,7 @@ complex transformations and describe their main properties.
 Note that statistical data handling differ from relational algebra, where the former focus
 on transformations and the latter on information retrieval.
 
-\citeauthor{Song2021}\footfullcite{Song2021}, for example, propose a formal paradigm for statistical data
+\textcite{Song2021}\footfullcite{Song2021}, for example, propose a formal paradigm for statistical data
 transformation.  They present a data model, an algebra, and a formal language.  Their goal
 is to create a standard for statistical data transformation that can be used by different
 statistical software.
